intel/bench_214_work/extr_.linuxdriversmediadvb-frontendsdrxd_hard.c_CDRXD_with_main/log.txt
bench_214_work/extr_.linuxdriversmediadvb-frontendsdrxd_hard.c_CDRXD_with_main/extr_.linuxdriversmediadvb-frontendsdrxd_hard.c_CDRXD_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214_work/extr_.linuxdriversmediadvb-frontendsdrxd_hard.c_CDRXD_with_main/extr_.linuxdriversmediadvb-frontendsdrxd_hard.c_CDRXD_with_main.c:159:25: error: assigning to 'int *' from incompatible type 'void *'
                state->m_HiI2cPatch = NULL;
                                      ^~~~
bench_214_work/extr_.linuxdriversmediadvb-frontendsdrxd_hard.c_CDRXD_with_main/extr_.linuxdriversmediadvb-frontendsdrxd_hard.c_CDRXD_with_main.c:2:14: note: expanded from macro 'NULL'
#define NULL ((void*)0)
             ^~~~~~~~~~
2 errors generated.
HLS FPGA Parse FAILED.
